# dsrp-machine-learning-engineering-2

./: Makefile  README.md  pyproject.toml
dsrp_mle2/: __init__.py  dataset.py  features.py  plots.py
dsrp_mle2/modeling/: predict.py  train.py
feast_service/: feast-deployment.sh
feast_service/dsrp_fs_mle2/feature_repo/: dsrp_booking_features.py  example_repo.py  feature_store.yaml
feast_service/dsrp_fs_mle2/feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
feast_service/fs_dsrp_mle2_jul9/feature_repo/: bookings.py  feature_store.yaml
feast_service/fs_dsrp_mle2_jul9/feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
notebooks/: advanced_supervised_models.ipynb  advanced_unsupervised.ipynb  clustering_series_tiempo.ipynb  embeddings.ipynb  fe_0.ipynb  feast_mlflow.ipynb  feature_engineering.ipynb  series_de_tiempo.ipynb
notebooks/catboost_info/: catboost_training.json  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
