[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dsrp_mle2"
version = "0.0.1"
description = "DSRP MLE2"
authors = [
  { name = "Miguel Arquez" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "feast>=0.50.0",
    "jupyterlab>=4.4.4",
    "loguru",
    "pandas>=2.3.0",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.0",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["dsrp_mle2"]
include = ["pyproject.toml", "dsrp_mle2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dsrp_mle2"]
force-sort-within-sections = true

